# from-software-archipelago-clients

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  WINDOWS-CUTOVER-CHECKLIST.md  rustfmt.toml
.github/workflows/: test.yaml
crates/ds3-archipelago/: CHANGELOG.md  Cargo.toml
crates/ds3-archipelago/src/: core.rs  game.rs
crates/eldenring-archipelago/: Cargo.toml  MIGRATION.md  build.rs
crates/eldenring-archipelago/src/: auto_equip.rs  check_lots.rs  config_watch.rs  contract_gen.rs  core.rs  core.rs.bak  core.rs.bak_flagfp  core.rs.bak_gfgame  core.rs.bak_graceclobber  core.rs.bak_minibaker  core.rs.bak_p3b  core.rs.bak_rlwarn  core.rs.bak_startclobber  core.rs.bak_truncated  deathlink.rs  detour.rs  enemy_drops.rs  fast_travel.rs  flagpoll.rs  flags.rs  flask.rs  fmg_inject.rs  fogwall.rs  game.rs  goal.rs  hook_impl.rs  input.rs  inventory.rs  key_resolver.rs  keyitems.rs  lib.rs  minibaker.rs  no_equip_load.rs  no_fall_damage.rs  no_weapon_reqs.rs  notif_ticker.rs  params.rs  reconcile_io.rs  region.rs  scaling.rs  (+13 more)
crates/eldenring-archipelago/src/_standalone_backup/: core.rs  lib.rs
crates/eldenring-archipelago/src/_standalone_backup/game/: grant.rs
crates/eldenring-archipelago/src/game/: console.rs  deathlink.rs  detour.rs  features.rs  flags.rs  grant.rs  mod.rs  net.rs  params.rs  progressive.rs  upgrades.rs
crates/er-codec/: Cargo.toml
crates/er-codec/src/: lib.rs
crates/er-logic/: Cargo.toml
crates/er-logic/er-logic/src/: .fuse_hidden0000000b00000002  progressive.rs  receive.rs  region_lock.rs  upgrades.rs
crates/er-logic/src/: attunement.rs  attunement_replay.rs  auto_equip.rs  boss_felled.rs  boss_key_replay.rs  capital.rs  capital_replay.rs  config_reload.rs  config_reload_replay.rs  deathlink.rs  deathlink_gate_replay.rs  fast_travel.rs  fast_travel_replay.rs  flagpoll_baseline_replay.rs  flask_grant_replay.rs  flask_reconcile.rs  grace.rs  grace_flush_replay.rs  grants.rs  hook.rs  lib.rs  map_reveal_replay.rs  marker.rs  marker_replay.rs  name_override.rs  options.rs  progressive.rs  receive.rs  receive_watermark_replay.rs  reconcile.rs  reconciler_replay.rs  region_lock.rs  region_lock_replay.rs  region_locks.rs  save_state.rs  scadu_blessing_replay.rs  scaling.rs  seed_change.rs  start_backfill.rs  start_grant_replay.rs  (+13 more)
crates/er-logic/tests/: slot_data_fixture.rs
crates/er-logic/tests/fixtures/: README.md  slot_data_fixture.json
crates/er-semver/: Cargo.toml
crates/er-semver/src/: lib.rs
crates/sdt-archipelago/: CHANGELOG.md  Cargo.toml
crates/sdt-archipelago/src/: core.rs  game.rs
crates/shared/src/: config.rs  core.rs  game.rs  lib.rs  overlay.rs  overlay.rs.bak  utils.rs
cutover-phases/: README.md  phase-1-flags.md  phase-2-unique-goods.md  phase-4-burn-guards.md
docs/: ARCHITECTURE.md  EVENT-FLAG-SPACE.md
docs/history/: MIGRATION.md  README.md  WINDOWS-CUTOVER-CHECKLIST.md  phase-3-ledgered-consumables.md
