[package]
name = "eldenring-archipelago"
version = "0.1.0"
edition = "2021"
description = "ER Archipelago runtime client (Rust spike). The injected cdylib: DllMain entry, AddItemFunc detour, ParamBase walk via fromsoftware-rs, CSEventFlagMan reporting. Pure logic comes from er-codec + er-semver."
license = "MIT"

[lib]
# Injected DLL. (On non-Windows hosts this still builds — the in-process modules are cfg'd out —
# so CI can typecheck the crate alongside the pure-logic crates.)
crate-type = ["cdylib", "rlib"]

[dependencies]
er-codec = { path = "../er-codec" }
er-semver = { path = "../er-semver" }

# Windows-only, in-process dependencies. Target-gated so `cargo build`/`test` works on Linux/macOS.
# Versions are indicative — pin against fswap's workspace + crates.io at spike time (see SPEC §8).
[target.'cfg(windows)'.dependencies]
# Typed game bindings: SoloParamRepository / CSEventFlagMan / CSFieldArea / inventory / params.
# Replaces er_hooks.h + er_singletons.h + the hand-rolled param walk.
eldenring = "0.14"            # vswarte/fromsoftware-rs
fromsoftware-shared = "0.14"  # FD4 singleton finder + shared structures
# Inline detour for AddItemFunc (Phase 3). OPTIONAL + behind the `detour` feature: retour's
# `static-detour` needs NIGHTLY, but fromsoftware-rs pins stable (its rust-toolchain.toml is
# `channel = "stable"`), so Phase 3 implements detour.rs with retour's stable `GenericDetour`.
# Off-by-default keeps the Phase-1 spike building on stable.
retour = { version = "0.3", optional = true }
# Win32 surface (GetModuleHandleW for the module base). Only detour.rs uses it today, so it rides
# the same feature. Pinned 0.61 to match eldenring 0.14 (avoids two `windows` versions in the tree).
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_System_Console"], optional = true }
# Logging (replaces spdlog): tracing + a non-blocking file sink (tracing-appender).
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
# JSON config / slot_data (replaces nlohmann/json).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# AP network protocol (Phase 4). nex3's archipelago_rs is the crate fswap's clients use. It is
# POLL-based (Connection::update), so it runs on the worker thread with NO async runtime. Default
# features pull rustls + native-tls (the crate tries rustls first, falls back to native-tls, then
# plain ws). Off-by-default `net` feature.
archipelago_rs = { version = "2.1.1", optional = true }

[features]
# `detour` (the Phase-3 AddItemFunc hook) is now on retour's STABLE GenericDetour, so it builds on
# stable and is enabled by default. Build the lean Phase-1-only cdylib (no retour/windows) with
# `--no-default-features`.
# Phase 4 is compile-green, so `net` joins the default build (like `detour` did after Phase 3).
default = ["detour", "net"]
detour = ["dep:retour", "dep:windows"]
# Phase 4 AP networking. Implies `detour` (server grants reuse the detour trampoline + the
# inventory pointer it captures). NOT in `default` yet — enable with `--features net` until the
# Windows build is green, then promote to default like `detour` was.
net = ["detour", "dep:archipelago_rs"]

[lints.rust]
# Unlike the pure crates, this one needs `unsafe` for FFI/detours — but only inside the
# clearly-marked in-process modules.
unsafe_code = "warn"
