[package]
name = "eldenring-archipelago"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = false

[lib]
crate-type = ["cdylib"]
name = "eldenring_archipelago"

[dependencies]
anyhow.workspace = true
archipelago_rs.workspace = true        # ensure the workspace is on 3.0.1 (try-ap-3x) so ER seeds connect
# Track the SAME ref as `eldenring` below (NOT `.workspace`, which is the 0.13 default-branch source
# the lock pins to 893cdd37). `main` is 0.14, whose eldenring ships RVAs for ER 2.6.2.0 (current
# game). Within this crate that gives ONE fromsoftware-shared (0.14) copy, so CSTaskImp's
# `SharedTaskImp` impl and our `use fromsoftware_shared::SharedTaskImpExt` agree. The framework
# (shared)/ds3/sekiro keep their own 0.13 copy untouched — the two never trade fss types across
# `shared::Game` (which exposes only `impl FnMut`/`bool`/hudhook). Pin the resolved SHA after build.
fromsoftware-shared = { git = "https://github.com/vswarte/fromsoftware-rs", branch = "main" }
hudhook.workspace = true
log.workspace = true
shared.workspace = true
windows.workspace = true
serde_json = "1"
retour = "0.3"   # stable GenericDetour for the AddItemFunc pickup hook (same as the standalone client)
# ER game bindings on `main` (0.14): its rva.rs lists ER WW 2.6.2.0 / JP 2.6.2.1, so it supports the
# current game (893cdd37 only had 2.6.1.x). Must track the SAME ref as fromsoftware-shared above so
# they're ONE source instance (one fss copy → SharedTaskImp/SharedTaskImpExt resolve). Isolated from
# the workspace's 0.13 by being a different git ref than the framework's default-branch source.
eldenring = { git = "https://github.com/vswarte/fromsoftware-rs", branch = "main" }
# ER pure-logic crates (host-tested).
er-codec = { path = "../er-codec" }
er-logic = { path = "../er-logic" }

[features]
profile = ["shared/profile"]
