[package]
name = "eldenring-archipelago"
# LOCKSTEP with Archipelago/worlds/eldenring/__init__.py fill_slot_data "versions"
# (">=0.1.0-beta.4 <0.1.0-beta.5"): er-semver orders a bare release 0.1.0 ABOVE every
# 0.1.0-beta.*, so "0.1.0" fails the connect gate on every seed. Guarded by the core.rs
# test client_version_is_inside_apworld_contract_band.
version = "0.1.0-beta.4"
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = false

[lib]
crate-type = ["cdylib"]
name = "eldenring_archipelago"

[dependencies]
anyhow.workspace = true
archipelago_rs.workspace = true        # ensure the workspace is on 3.0.1 (try-ap-3x) so ER seeds connect
# Track the SAME ref as `eldenring` below (NOT `.workspace`, which is the 0.13 default-branch source
# the lock pins to 893cdd37). `main` is 0.14, whose eldenring ships RVAs for ER 2.6.2.0 (current
# game). Within this crate that gives ONE fromsoftware-shared (0.14) copy, so CSTaskImp's
# `SharedTaskImp` impl and our `use fromsoftware_shared::SharedTaskImpExt` agree. The framework
# (shared)/ds3/sekiro keep their own 0.13 copy untouched — the two never trade fss types across
# `shared::Game` (which exposes only `impl FnMut`/`bool`/hudhook). Pin the resolved SHA after build.
fromsoftware-shared = { git = "https://github.com/vswarte/fromsoftware-rs", branch = "main" }
hudhook.workspace = true
# Item-tracker overlay window (shared::Core render_overlay_* hooks take &imgui::Ui). Same spec as
# crates/shared so the workspace [patch.crates-io] git pin resolves both to ONE imgui instance.
imgui = { version = "0.12", features = ["docking", "tables-api"] }
log.workspace = true
shared.workspace = true
windows.workspace = true
serde = { version = "1", features = ["derive"] }   # derive for the per-character WatermarkStore file
serde_json = "1"
retour = "0.3"   # stable GenericDetour for the AddItemFunc pickup hook (same as the standalone client)
oneshot = { version = "0.2.1", features = ["std"] }   # scout_proof: archipelago_rs hands back a oneshot::Receiver from scout_locations (VERIFY shape on 3.0.1)
# ER game bindings on `main` (0.14): its rva.rs lists ER WW 2.6.2.0 / JP 2.6.2.1, so it supports the
# current game (893cdd37 only had 2.6.1.x). Must track the SAME ref as fromsoftware-shared above so
# they're ONE source instance (one fss copy → SharedTaskImp/SharedTaskImpExt resolve). Isolated from
# the workspace's 0.13 by being a different git ref than the framework's default-branch source.
eldenring = { git = "https://github.com/vswarte/fromsoftware-rs", branch = "main" }
# ER pure-logic crates (host-tested).
er-codec = { path = "../er-codec" }
er-logic = { path = "../er-logic" }

[build-dependencies]
chrono = "0.4"   # build.rs: stamp ER_BUILD_TIME (UTC) into the binary for the connect banner

[features]
profile = ["shared/profile"]
