[package]
name = "er-logic"
version = "0.1.0"
edition = "2021"
description = "Pure + seam-based, host-tested decision logic for the ER Archipelago client (watermark split, version gate, slot_data parse, save round-trip, progressive tiers, region-lock, deathlink, grace flush, once-per-save grants, auto_upgrade/scadu). No eldenring/windows/socket deps, so CI exercises it on any host."
license = "MIT"

[dependencies]
serde_json = "1"
er-semver = { path = "../er-semver" }
er-codec = { path = "../er-codec" }
